# python-csv-parsing

./: .gitignore  README.md  lab_3.py  pyproject.toml
csv/output/: Africa.csv  Americas.csv  Asia.csv  Europe.csv  Oceania.csv  Other.csv
tests/: test_lab_3.py
