[project]
name = "python-csv-parsing"
version = "0.1.0"
description = "CSV parsing of country data, classification by continent/region"
authors = [
    { name="William Callahan", email="william@williamcallahan.com" },
    { name="Vasilisa Zaitseva", email="vasilisa.zaitseva@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
]
